--- a/.config/qutebrowser/newpage.html
+++ b/.config/qutebrowser/newpage.html
@@ -90,7 +90,7 @@
  		<li>Entertainment</li>
      	<li><a href="https://www.youtube.com/">youtube</a></li>
      	<li><a href="https://www.twitch.com">twitch</a></li>
-     	<li><a href="https://www.tweakers.nl/">tweakers</a></li>
+     	<li><a href="https://old.reddit.com/">reddit</a></li>
      </ul>
 
   </nav>
